--- a/Models/trainingNewModels/train.ipynb
+++ b/Models/trainingNewModels/train.ipynb
@@ -70,7 +70,7 @@
       "Configuration parameters set.\n",
       "  Dataset Root Path: C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\n",
       "  Dataset YAML Path: C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\dataset.yaml\n",
-      "  Base Pretrained Model: C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\n",
+      "  Base Pretrained Model: C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\n",
       "  Project Name: Larvae_additional_training\n",
       "  Run Name: train_l_Larvae_seg\n"
      ]
@@ -88,9 +88,9 @@
     "# --- Model Configuration ---\n",
     "# Choose model size: 'n' (nano), 's' (small), 'm' (medium), 'l' (large), 'x' (extra-large)\n",
     "MODEL_SIZE = 'l'\n",
-    "BASE_PRETRAINED_MODEL_NAME = r\"C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\" # current best larvae segmentation model\n",
-    "# If using a pre-trained YOLOv8 model, it should be in the format below:\n",
-    "# BASE_PRETRAINED_MODEL_NAME = f'yolov8{MODEL_SIZE}-seg.pt' # e.g., 'yolov8m-seg.pt' [2, 3]\n",
+    "BASE_PRETRAINED_MODEL_NAME = r\"C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\" # current best larvae segmentation model\n",
+    "# If using a pre-trained YOLOv8 model, it should be in the format below, just change the size (n, s, m, l, x).:\n",
+    "# BASE_PRETRAINED_MODEL_NAME = r\"C:\\Users\\JellyTracker\\Desktop\\BaseModels\\yolov8l-seg.pt\"\n",
     "\n",
     "# --- Training Run Configuration ---\n",
     "# 'project': Top-level directory for saving runs (e.g., 'runs/s\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +259,8 @@
       "\n",
       "--- Determining Model Weights for Training ---\n",
       "Searching for existing run directories matching pattern: runs\\segment\\Larvae_additional_training\\train_l_Larvae_seg*\n",
-      "Using specified model weights file directly: C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\n",
-      "Decision: Will start training FROM or RESUME using: C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\n"
+      "Using specified model weights file directly: C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\n",
+      "Decision: Will start training FROM or RESUME using: C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
      "text": [
       "\n",
       "--- Initializing YOLO Model ---\n",
-      "Loading model with weights from: C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\n",
+      "Loading model with weights from: C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\n",
       "Successfully initialized YOLO model.\n",
       "Model loaded with official pretrained weights.\n"
      ]
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +373,8 @@
       "\n",
       "--- Starting YOLOv8 Segmentation Training ---\n",
       "  Dataset YAML: C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\dataset.yaml\n",
-      "  Model being trained: Initialized from C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt\n",
-      "  Epochs: 1\n",
+      "  Model being trained: Initialized from C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt\n",
+      "  Epochs: 5\n",
       "  Image Size: 640x640\n",
       "  Batch Size: 8\n",
       "  Device: 0\n",
@@ -386,7 +386,7 @@
       "  Allow overwrite if run exists (exist_ok=True): True\n",
       "New https://pypi.org/project/ultralytics/8.3.179 available  Update with 'pip install -U ultralytics'\n",
       "Ultralytics 8.3.137  Python-3.9.21 torch-2.3.1 CUDA:0 (NVIDIA GeForce RTX 3090, 24576MiB)\n",
-      "\u001b[34m\u001b[1mengine\\trainer: \u001b[0magnostic_nms=False, amp=True, augment=False, auto_augment=randaugment, batch=8, bgr=0.0, box=7.5, cache=False, cfg=None, classes=None, close_mosaic=10, cls=0.5, conf=None, copy_paste=0.0, copy_paste_mode=flip, cos_lr=False, cutmix=0.0, data=C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\dataset.yaml, degrees=0.0, deterministic=True, device=0, dfl=1.5, dnn=False, dropout=0.0, dynamic=False, embed=None, epochs=1, erasing=0.4, exist_ok=True, fliplr=0.5, flipud=0.0, format=torchscript, fraction=1.0, freeze=None, half=False, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, imgsz=640, int8=False, iou=0.7, keras=False, kobj=1.0, line_width=None, lr0=0.01, lrf=0.01, mask_ratio=4, max_det=300, mixup=0.0, mode=train, model=C:\\Users\\JellyTracker\\Desktop\\TrainingPipeline\\Foundational_Training\\train_m_Larvae_seg\\weights\\best.pt, momentum=0.937, mosaic=1.0, multi_scale=False, name=train_l_Larvae_seg, nbs=64, nms=False, opset=None, optimize=False, optimizer=auto, overlap_mask=True, patience=10, perspective=0.0, plots=True, pose=12.0, pretrained=True, profile=False, project=Larvae_additional_training, rect=False, resume=False, retina_masks=False, save=True, save_conf=False, save_crop=False, save_dir=Larvae_additional_training\\train_l_Larvae_seg, save_frames=False, save_json=False, save_period=-1, save_txt=False, scale=0.5, seed=0, shear=0.0, show=False, show_boxes=True, show_conf=True, show_labels=True, simplify=True, single_cls=False, source=None, split=val, stream_buffer=False, task=segment, time=None, tracker=botsort.yaml, translate=0.1, val=True, verbose=True, vid_stride=1, visualize=False, warmup_bias_lr=0.1, warmup_epochs=3.0, warmup_momentum=0.8, weight_decay=0.0005, workers=4, workspace=None\n",
+      "\u001b[34m\u001b[1mengine\\trainer: \u001b[0magnostic_nms=False, amp=True, augment=False, auto_augment=randaugment, batch=8, bgr=0.0, box=7.5, cache=False, cfg=None, classes=None, close_mosaic=10, cls=0.5, conf=None, copy_paste=0.0, copy_paste_mode=flip, cos_lr=False, cutmix=0.0, data=C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\dataset.yaml, degrees=0.0, deterministic=True, device=0, dfl=1.5, dnn=False, dropout=0.0, dynamic=False, embed=None, epochs=5, erasing=0.4, exist_ok=True, fliplr=0.5, flipud=0.0, format=torchscript, fraction=1.0, freeze=None, half=False, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, imgsz=640, int8=False, iou=0.7, keras=False, kobj=1.0, line_width=None, lr0=0.01, lrf=0.01, mask_ratio=4, max_det=300, mixup=0.0, mode=train, model=C:\\Users\\JellyTracker\\Desktop\\JellyFishTrackingPC-main\\Models\\larvae_best.pt, momentum=0.937, mosaic=1.0, multi_scale=False, name=train_l_Larvae_seg, nbs=64, nms=False, opset=None, optimize=False, optimizer=auto, overlap_mask=True, patience=10, perspective=0.0, plots=True, pose=12.0, pretrained=True, profile=False, project=Larvae_additional_training, rect=False, resume=False, retina_masks=False, save=True, save_conf=False, save_crop=False, save_dir=Larvae_additional_training\\train_l_Larvae_seg, save_frames=False, save_json=False, save_period=-1, save_txt=False, scale=0.5, seed=0, shear=0.0, show=False, show_boxes=True, show_conf=True, show_labels=True, simplify=True, single_cls=False, source=None, split=val, stream_buffer=False, task=segment, time=None, tracker=botsort.yaml, translate=0.1, val=True, verbose=True, vid_stride=1, visualize=False, warmup_bias_lr=0.1, warmup_epochs=3.0, warmup_momentum=0.8, weight_decay=0.0005, workers=4, workspace=None\n",
       "\n",
       "                   from  n    params  module                                       arguments                     \n",
       "  0                  -1  1      1392  ultralytics.nn.modules.conv.Conv             [3, 48, 3, 2]                 \n",
@@ -417,15 +417,29 @@
       "Transferred 537/537 items from pretrained weights\n",
       "Freezing layer 'model.22.dfl.conv.weight'\n",
       "\u001b[34m\u001b[1mAMP: \u001b[0mrunning Automatic Mixed Precision (AMP) checks...\n",
-      "\u001b[34m\u001b[1mAMP: \u001b[0mchecks passed \n",
-      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access  (ping: 0.10.1 ms, read: 58.734.6 MB/s, size: 7.1 KB)\n"
+      "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt to 'yolo11n.pt'...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\labels... 548 images, 0 backgrounds, 0 corrupt: 100%|██████████| 548/548 [00:00<00:00, 2543.36it/s]"
+      "100%|██████████| 5.35M/5.35M [00:00<00:00, 67.4MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mAMP: \u001b[0mchecks passed \n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access  (ping: 0.00.0 ms, read: 2.10.7 MB/s, size: 7.0 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\labels... 527 images, 0 backgrounds, 0 corrupt: 100%|██████████| 527/527 [00:00<00:00, 1887.78it/s]"
      ]
     },
     {
@@ -446,14 +460,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mval: \u001b[0mFast image access  (ping: 0.00.0 ms, read: 153.135.4 MB/s, size: 6.5 KB)\n"
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access  (ping: 0.00.0 ms, read: 154.145.7 MB/s, size: 6.9 KB)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mval: \u001b[0mScanning C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\labels.cache... 548 images, 0 backgrounds, 0 corrupt: 100%|██████████| 548/548 [00:00<?, ?it/s]\n"
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning C:\\Users\\JellyTracker\\Downloads\\larvae_yolo_dataset\\larvae_yolo_dataset\\labels.cache... 527 images, 0 backgrounds, 0 corrupt: 100%|██████████| 527/527 [00:00<?, ?it/s]\n"
      ]
     },
     {
@@ -466,7 +480,7 @@
       "Image sizes 640 train, 640 val\n",
       "Using 4 dataloader workers\n",
       "Logging results to \u001b[1mLarvae_additional_training\\train_l_Larvae_seg\u001b[0m\n",
-      "Starting training for 1 epochs...\n",
+      "Starting training for 5 epochs...\n",
       "\n",
       "      Epoch    GPU_mem   box_loss   seg_loss   cls_loss   dfl_loss  Instances       Size\n"
      ]
@@ -475,17 +489,150 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "        1/1      3.93G      1.042      1.646     0.5365      1.021          6        640: 100%|██████████| 69/69 [00:11<00:00,  6.13it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 35/35 [00:04<00:00,  7.56it/s]\n"
+      "        1/5       3.9G       1.22      2.586     0.4962      1.138         11        640: 100%|██████████| 66/66 [00:10<00:00,  6.02it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  8.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   all        548        548      0.996      0.998      0.995      0.794      0.996      0.998      0.995      0.756\n",
+      "                   all        527        527          1          1      0.995      0.871          1          1      0.995      0.864\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "1 epochs completed in 0.005 hours.\n",
+      "      Epoch    GPU_mem   box_loss   seg_loss   cls_loss   dfl_loss  Instances       Size\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "        2/5      4.12G     0.5324     0.7409     0.3226       0.84         17        640: 100%|██████████| 66/66 [00:09<00:00,  7.26it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  9.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        527        527          1          1      0.995      0.906          1          1      0.995      0.862\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      Epoch    GPU_mem   box_loss   seg_loss   cls_loss   dfl_loss  Instances       Size\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "        3/5      4.12G     0.4661     0.6598     0.2826     0.8077          7        640: 100%|██████████| 66/66 [00:08<00:00,  7.34it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  9.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        527        527          1          1      0.995      0.909          1          1      0.995      0.886\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      Epoch    GPU_mem   box_loss   seg_loss   cls_loss   dfl_loss  Instances       Size\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "        4/5      4.12G     0.4615     0.6447     0.2817     0.8246         11        640: 100%|██████████| 66/66 [00:08<00:00,  7.39it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  9.05it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        527        527          1          1      0.995      0.927          1          1      0.995       0.89\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      Epoch    GPU_mem   box_loss   seg_loss   cls_loss   dfl_loss  Instances       Size\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "        5/5      4.12G      0.434     0.6232     0.2587      0.811         11        640: 100%|██████████| 66/66 [00:08<00:00,  7.35it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  9.05it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        527        527          1          1      0.995      0.941          1          1      0.995      0.898\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "5 epochs completed in 0.019 hours.\n",
       "Optimizer stripped from Larvae_additional_training\\train_l_Larvae_seg\\weights\\last.pt, 54.8MB\n",
       "Optimizer stripped from Larvae_additional_training\\train_l_Larvae_seg\\weights\\best.pt, 54.8MB\n",
       "\n",
@@ -498,15 +645,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 35/35 [00:03<00:00,  9.86it/s]\n"
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95)     Mask(P          R      mAP50  mAP50-95): 100%|██████████| 33/33 [00:03<00:00,  9.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   all        548        548      0.997      0.998      0.995      0.792      0.997      0.998      0.995      0.755\n",
-      "Speed: 0.2ms preprocess, 2.6ms inference, 0.0ms loss, 0.9ms postprocess per image\n",
+      "                   all        527        527          1          1      0.995      0.941          1          1      0.995      0.898\n",
+      "Speed: 0.2ms preprocess, 2.4ms inference, 0.0ms loss, 1.0ms postprocess per image\n",
       "Results saved to \u001b[1mLarvae_additional_training\\train_l_Larvae_seg\u001b[0m\n",
       "\n",
       "--- Training Complete ---\n",
@@ -568,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the Trained Model"
+    "Using the Trained Model (Optional / not helpful, use compareModels.py)"
    ]
   },
   {
